# Speech-Recognitions-Models

./: .env  README.md  SpeechRecog.py  pyproject.toml
Assembly_AI/: Speech_Recog.py  api_communication.py  main.py  record_mic.py
Assembly_AI_STT/: main.py  record_mic.py
Data/: Assembly_AI_output.wav.txt  output.wav.txt  output0.txt  output1.txt
WebDriver_STTs/: 0_stt.py  1_stt.py  2_stt.py
