[project]
name = "speech-recognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "faster-whisper>=1.1.1",
    "pyaudio>=0.2.14",
    "requests>=2.32.3",
    "speechrecognition>=3.14.3",
    "websockets==10.4",
]
